jira_clone/force-app/main/default/objects/NameSequence__c/NameSequence__c.object-meta.xml
<CustomObject>
    <description>Per-project sequence counters used to generate default Names for Sprint__c, Ticket__c and Subtask__c (SPR-N, TKT-N, SUB-N).</description>
    <label>Name Sequence</label>
    <nameField>
        <label>Name Sequence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Name Sequences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>