jira_clone/force-app/main/default/objects/NameSequence__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Project this sequence row belongs to. One row per project.</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Name Sequences</relationshipLabel>
    <relationshipName>NameSequences</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>