jira_clone/force-app/main/default/objects/NameSequence__c/fields/SprintLastSequence__c.field-meta.xml
<CustomField>
    <fullName>SprintLastSequence__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Last assigned sequence number for Sprint__c default Name (SPR-N) in this project.</description>
    <label>Sprint Last Sequence</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>