jira_clone/force-app/main/default/objects/NameSequence__c/fields/SubtaskLastSequence__c.field-meta.xml
<CustomField>
    <fullName>SubtaskLastSequence__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Last assigned sequence number for Subtask__c default Name (SUB-N) in this project.</description>
    <label>Subtask Last Sequence</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>