jira_clone/force-app/main/default/objects/NameSequence__c/fields/TicketLastSequence__c.field-meta.xml
<CustomField>
    <fullName>TicketLastSequence__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Last assigned sequence number for Ticket__c default Name (TKT-N) in this project.</description>
    <label>Ticket Last Sequence</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>